MyBatis-CMEU2.0相关的使用说明

--- a/resource/index.css
+++ b/resource/index.css
@@ -4,7 +4,7 @@
     padding: 0;
     border: 0;
     vertical-align: baseline;
-    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+    font-family:sans-serif,"Arial","Microsoft YaHei","黑体","宋体";
  }
 
 .navAction{
