--- a/resource/index_phone.css
+++ b/resource/index_phone.css
@@ -5,8 +5,7 @@
     border: 0;
     vertical-align: baseline;
     font-family:sans-serif,"Arial","Microsoft YaHei","黑体","宋体";
- }
-
+}
 .navAction{
     border-left: 15px solid #1c98ff !important;
 }
@@ -60,12 +59,17 @@
     margin-left: 80px;
 }
 .menuBack{
- display:none;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity:0.2;
+    position: fixed;
+    z-index: 1;
 }
 /*头部样式*/
 .header{
     width:100%;
-    height: 60px;
+    height: 90px;
     background-color: #EAEBEA;
     position:fixed;
     z-index: 9;
@@ -78,7 +82,7 @@
     text-align: center;
 }
 .logos img{
-    margin-top: 3px;
+    margin-top: 15px;
 }
 .logos .logoName{
     position: relative;
@@ -94,17 +98,18 @@
     color: #990099;
 }
 .menu{
-    display: none;
+    position: absolute;
+    margin-top: 3px;
+    margin-left: 30px;
 }
 .range{
-    height: 60px
+    height: 90px
 }
 /*工具介绍*/
 .aboutUs{
     width: 100%;
     height: auto;
     padding: 30px 0px;
-    margin-bottom: 20px;
     text-align: center;
     color: white;
     background-color: #0047ff;
@@ -114,11 +119,14 @@
     background-image: linear-gradient(to bottom, #0047ff 0,#1C98FF 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0047ff', endColorstr='#2FB9FD', GradientType=0);
 }
+.CMEUBOX{
+    height: 100px;
+}
 .CMEUBOX .nameBox{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px 16px;
+    padding: 30px 20px;
     color: white;
 }
 .CMEUBOX .nameBox .name{
@@ -153,6 +161,7 @@
 
 /*主体样式*/
 .contextBox{
+    padding-top: 20px;
     width:100%;
     /*height: 12000px;*/
 }
@@ -163,15 +172,21 @@
     position: relative;
 }
 .nav{
-    position: absolute;
+    position: fixed;
     width: 23%;
-    height: 500px;
+    height: 100%;
+    z-index: 99;
+    top: 90px;
+    left: 0px;
+    background-color: white;
+    padding-left: 35px;
+    padding-top: 20px;
+    display: none;
 }
 .docInfo{
     position: absolute;
-    width:77%;
+    width:100%;
     height: 500px;
-    left: 23%;
     font-size: 16px;
 }
 .docInfo ol{
@@ -184,9 +199,9 @@
     margin-top: 20px;
 }
 .nav ul{
-    position: absolute;
+    position: fixed;
     list-style-type:none;
-    width:90%;
+    width:20%;
 }
 .nav ul li{
     margin-bottom: 10px;
@@ -194,12 +209,10 @@
     cursor: pointer;
     text-align: center;
     border-radius: 5px;
-    border: 1px solid #1c98ff;
     font-weight:bold;
     color: #1c98ff;
 }
 .nav ul li:hover{
-    border: 1px solid #1c98ff;
     border-left:15px solid #1c98ff;
     transition: border .3s;
 }
