--- a/resource/index.css
+++ b/resource/index.css
@@ -66,10 +66,10 @@
 .header{
     width:100%;
     height: 60px;
-    background-color: #EAEBEA;
+    background-color: white;
     position:fixed;
     z-index: 9;
-    color: white;
+    box-shadow: 0px 5px 5px #666;
 }
 .logos{
     height: 100%;
