--- a/resource/index_phone.css
+++ b/resource/index_phone.css
@@ -70,10 +70,10 @@
 .header{
     width:100%;
     height: 90px;
-    background-color: #EAEBEA;
+    background-color: white;
     position:fixed;
     z-index: 9;
-    color: white;
+    box-shadow: 0px 5px 5px #666;
 }
 .logos{
     height: 100%;
@@ -180,6 +180,7 @@
     left: 0px;
     background-color: white;
     padding-left: 35px;
+    padding-right: 20px;
     padding-top: 20px;
     display: none;
 }
@@ -211,6 +212,7 @@
     border-radius: 5px;
     font-weight:bold;
     color: #1c98ff;
+    border: 1px solid #1c98ff;
 }
 .nav ul li:hover{
     border-left:15px solid #1c98ff;
