MyBatis-CMEU2.0相关的使用说明

--- a/resource/index_phone.css
+++ b/resource/index_phone.css
@@ -200,9 +200,9 @@
     margin-top: 20px;
 }
 .nav ul{
-    position: fixed;
+    position: absolute;
     list-style-type:none;
-    width:20%;
+    width:80%;
 }
 .nav ul li{
     margin-bottom: 10px;
