--- a/resource/index_phone.css
+++ b/resource/index_phone.css
@@ -141,6 +141,8 @@
     font-size: 26px;
     font-weight:bold;
     padding-bottom: 20px;
+    padding-left:5%;
+    padding-right:5%;
 }
 .downBox{
     margin-bottom: 10px;
