--- a/resource/index_phone.css
+++ b/resource/index_phone.css
@@ -75,9 +75,13 @@
     z-index: 9;
     box-shadow: 0px 5px 5px #666;
 }
+.about{
+    display: none;
+}
 .logos{
+    padding-left: 110px;
     height: 100%;
-    width: 600px;
+    width: 300px;
     margin: 0px auto;
     text-align: center;
 }
@@ -175,7 +179,7 @@
 }
 .nav{
     position: fixed;
-    width: 25%;
+    width: 50%;
     height: 100%;
     z-index: 99;
     top: 90px;
